<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/new_game"
        android:icon="@drawable/ic_action_view_as_list"
        android:showAsAction="ifRoom"
        android:title="@string/new_game"/>
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_action_search"
        android:title="@string/help"/>
    <item
        android:id="@+id/display_history"
        android:title="@string/history">

        <!-- "display history" sub menu -->
        <menu>
            <item
                android:id="@+id/clipUno"
                android:title="@string/clip1"/>
            <item
                android:id="@+id/clipDos"
                android:title="@string/clip2"/>
        </menu>
    </item>
    <item
        android:id="@+id/email_friend"
        android:icon="@drawable/ic_action_search"
        android:title="@string/email_a_friend"/>
    <item
        android:id="@+id/change_mode"
        android:icon="@drawable/ic_action_search"
        android:title="@string/select_lang"/>
    <item
        android:id="@+id/show_use"
        android:icon="@drawable/ic_action_search"
        android:title="@string/show_use_dur"/>

</menu>